build app with docker compose