@@ -1,7 +1,6 @@
 plugins {
-    id "org.springframework.boot" version "2.5.0-SNAPSHOT"
+    id "org.springframework.boot" version "2.6.1"
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
-    id "net.ltgt.apt" version "0.21"
     id "application"
     id "jacoco"
     id "java"
@@ -15,17 +14,16 @@ java {
 ext {
     set("mapstructVersion", "1.4.2.Final")
     set("lombokMapstructBinding", "0.2.0")
-    set("commonsCollections", "4.3")
+    set("commonsCollections", "4.4")
     set("swaggerVersion", "2.9.2")
-    set("openApiVersion", "1.5.3")
+    set("openApiVersion", "1.5.12")
     set("hamcrestVersion", "1.3")
 }
 
 group = "com.ipaixao.ibeer"
-version = "0.0.1-SNAPSHOT"
+version = "0.0.1"
 
-sourceCompatibility = JavaVersion.VERSION_15
-targetCompatibility = JavaVersion.VERSION_15
+sourceCompatibility = JavaVersion.VERSION_17
 
 applicationName = "i-beer"
 
@@ -37,8 +35,6 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
-    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
@@ -65,32 +61,18 @@ dependencies {
     testImplementation "org.assertj:assertj-core"
     testImplementation "org.mockito:mockito-core"
     testImplementation "org.hamcrest:hamcrest-all:${hamcrestVersion}"
-    testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
-    }
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.springframework.security:spring-security-test"
-    testRuntime "com.h2database:h2"
-}
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec) {
-    jvmArgs += "--enable-preview"
-}
-tasks.withType(Javadoc) {
-    options.addStringOption("source", "15")
-    options.addBooleanOption("-enable-preview", true)
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+    runtimeOnly "com.h2database:h2"
 }
 
 bootBuildImage {
     environment = [
-            "BP_JVM_VERSION": "15.*"
+            "BP_JVM_VERSION": "17.*"
     ]
-    imageName = "${project.group}/${applicationName}:${project.version}"
+    imageName = "ipaixao/${applicationName}:${project.version}"
 }
 
 application {
